# sprint3/API/app/Models/Invoice.php
@@ -23,7 +23,7 @@ use Mehradsadeghi\FilterQueryString\FilterQueryString;
  *         @OA\Property(property="payment_method", type="string", example="Cash on Delivery"),
  *         @OA\Property(property="payment_account_name", type="string", example="John Doe"),
  *         @OA\Property(property="payment_account_number", type="string", example="0987654345"),
- *         @OA\Property(property="invoice_items", type="array", @OA\Items(type="object", example={"product_id": 9, "quantity": 1, "unit_price": 12.01}))
+ *         @OA\Property(property="invoicelines", type="array", @OA\Items(ref="#/components/schemas/InvoiceLineResponse"))
  *     }
  * )
  *
